--- a/products/manuscript/Project_Template.Rmd
+++ b/products/manuscript/Project_Template.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Example Template for Data Analysis Project"
+title: "The Impact of Added Non-Protein Nitrogen on the Rumen Microbiome and Fermentation of Substrates"
 subtitle: ""
-author: Andreas Handel
+author: Mia Carmichael
 institute: "University of Georgia"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
@@ -44,15 +44,13 @@ Note that this cited reference will show up at the end of the document, the refe
 # Introduction (required for part 1)
 
 ## General Background Information
-_Provide enough background on your topic that others can understand the why and how of your analysis_ 
+_The symbiotic relationship between ruminants and their ruminal microbial population allows cattle to occupy an ecological niche in which they have the ability to convert fibrous feedstuffs into higher quality end products via fermentation. Ruminal Microbes utilize nitrogen and carbon sources from ingested feedstuff to carryout bilogical processes, and create end products such as volitile fatty acids and microbial crude protein vital to cattle. It is due to this that it is of interest to identify optimal levels and types of non-protein nitrogen and carbon sources that are crucial to the rumen microbiome and cattle to increase efficiency. Previous studies have identified different results of nitrogen and carbon utlization, but few have also analyzed it in conjunction with the analysis of the rumen microbial population. _
 
 ## Description of data and data source
-_Describe what the data is, what it contains, where it is from, etc._
+_This will be an in vitro study. Rumen fluid will be collected from cattle at the animal units at UGA. There will be 6 treatment groups and three replicates. We will analyze rumen fluid with corn without added NPN, rumen fluid with corn with added NPN, rumen fluid with bermuda grass and added NPN,rumen fluid with bermuda grass and no NPN, rumen fluid without additional feed or NPN, and rumen fluid without additional feed and with added NPN. We will use whole genome sequencing to aquire the rumen microbial profiles before and after treatments, pH, methane oduction, volitile fatty acid production,and ammonia production._
 
 ## Questions/Hypotheses to be addressed
-_State the research questions you plan to answer with this analysis_
-
-
+_In my project I am trying to answer what impact does added non protein nitrogen have on the rumen microbiome population and its ability to ferment corn and bermuda grass. It will be interesting to see the trends and how the microbial profile and end products change as the nutrient availability changes In the rumen there are multiple classes of microbes, including fiber degrading, starch degrading, and methanogen producing bacteria. As the feedstuff changes, the abundance of specific microorganisms will as well, which dictate other outcomes as well, pH, VFA profile, ammonia production, and methane production. The implications of this study can aid in further manipulation of the diet and cow to improve feed efficiency, production costs, and envirornmental outputs._ 
 
 # Methods and Results
 
