--- a/products/manuscript/Project_Template.Rmd
+++ b/products/manuscript/Project_Template.Rmd
@@ -26,7 +26,7 @@ The symbiotic relationship between ruminants and their ruminal microbial populat
 This will be an in vitro study. Rumen fluid will be collected from cattle at the animal units at UGA. There will be 6 treatment groups and three replicates. We will analyze rumen fluid with corn without added NPN, rumen fluid with corn with added NPN, rumen fluid with bermuda grass and added NPN,rumen fluid with bermuda grass and no NPN, rumen fluid without additional feed or NPN, and rumen fluid without additional feed and with added NPN. We will use whole genome sequencing to aquire the rumen microbial profiles before and after treatments, pH, methane oduction, volitile fatty acid production,and ammonia production.
 
 ## Questions/Hypotheses to be addressed
-In my project I am trying to answer what impact does added non protein nitrogen have on the rumen microbiome population and its ability to ferment corn and bermuda grass. It will be interesting to see the trends and how the microbial profile and end products change as the nutrient availability changes In the rumen there are multiple classes of microbes, including fiber degrading, starch degrading, and methanogen producing bacteria. As the feedstuff changes, the abundance of specific microorganisms will as well, which dictate other outcomes as well, pH, VFA profile, ammonia production, and methane production. The implications of this study can aid in further manipulation of the diet and cow to improve feed efficiency, production costs, and envirornmental outputs. 
+In my project I am trying to answer what impact does added non protein nitrogen have on the rumen microbiome population and its ability to ferment corn and bermuda grass. It will be interesting to see the trends and how the microbial profile and end products change as the nutrient availability changes. In the rumen there are multiple classes of microbes, including fiber degrading, starch degrading, and methane producing bacteria. As the feedstuff changes, the abundance of specific microorganisms will as well, which dictate other outcomes as well, pH, VFA profile, ammonia production, and methane production. The implications of this study can aid in further manipulation of the diet and cow to improve feed efficiency, production costs, and envirornmental outputs. 
 
 # Methods and Results
 
