project intro part 1 edits 4

--- a/products/manuscript/Project_Template.Rmd
+++ b/products/manuscript/Project_Template.Rmd
@@ -20,7 +20,7 @@ _Write a summary of your project._
 # Introduction (required for part 1)
 
 ## General Background Information
-The symbiotic relationship between ruminants and their ruminal microbial population allows cattle to occupy an ecological niche in which they have the ability to convert fibrous feedstuffs into higher quality end products via fermentation. Ruminal Microbes utilize nitrogen and carbon sources from ingested feedstuff to carryout bilogical processes, and create end products such as volitile fatty acids and microbial crude protein vital to cattle. It is due to this that it is of interest to identify optimal levels and types of non-protein nitrogen and carbon sources that are crucial to the rumen microbiome and cattle to increase efficiency. Previous studies have identified different results of nitrogen and carbon utlization, but few have also analyzed it in conjunction with the analysis of the rumen microbial population. 
+The symbiotic relationship between ruminants and their ruminal microbial population allows cattle to occupy an ecological niche in which they have the ability to convert fibrous feedstuffs into higher quality end products via fermentation. Ruminants themselves do not produce fiber degrading enzymes, but they harbor bacteria, fungi, and protozoa that can (Russel, 2001). Ruminal Microbes utilize nitrogen and carbon sources from ingested feedstuff to carryout bilogical processes, and create end products such as volitile fatty acids and microbial crude protein vital to cattle. It is due to this that it is of interest to identify optimal levels and types of non-protein nitrogen and carbon sources that are crucial to the rumen microbiome and cattle to increase efficiency. Previous studies have identified different results of nitrogen and carbon utlization, but few have also analyzed it in conjunction with the analysis of the rumen microbial population. 
 
 ## Description of data and data source
 This will be an in vitro study. Rumen fluid will be collected from cattle at the animal units at UGA. There will be 6 treatment groups and three replicates. We will analyze rumen fluid with corn without added NPN, rumen fluid with corn with added NPN, rumen fluid with bermuda grass and added NPN,rumen fluid with bermuda grass and no NPN, rumen fluid without additional feed or NPN, and rumen fluid without additional feed and with added NPN. We will use whole genome sequencing to aquire the rumen microbial profiles before and after treatments, pH, methane oduction, volitile fatty acid production,and ammonia production.
